RESOLVED FIXED34272
[Android] V8 Bindings are missing numerous forward-declarations and includes
https://bugs.webkit.org/show_bug.cgi?id=34272
Summary [Android] V8 Bindings are missing numerous forward-declarations and includes
Steve Block
Reported 2010-01-28 09:50:17 PST
In the V8 Bindings, numerous numerous forward-declarations and includes are picked up through includes guarded by feature or platform flags. This causes build errors on Android, where these flags may not be enabled. - Scriptcontroller.h - Need to forward declare NPObject Chromium picks this up though V8Proxy.h -> ChromiumBridge.h - V8DOMWrapper.h - Need to forward declare V8Proxy Chromium picks this up through V8CustomXpathNSResolver.h, the contents of which are guarded with XPATH - V8DOMWindowShell.cpp - Need to include CString.h and PlatformBridge.h for Android
Attachments
Patch (2.02 KB, patch)
2010-01-28 10:42 PST, Steve Block
no flags
Steve Block
Comment 1 2010-01-28 10:42:11 PST
Adam Barth
Comment 2 2010-01-28 10:45:18 PST
Comment on attachment 47630 [details] Patch Those are mostly my mistakes. Thanks for fixing them. How close are we to having Android buildable from svn.webkit.org? That's the best way to catch future regressions like these.
WebKit Commit Bot
Comment 3 2010-01-28 13:34:53 PST
Comment on attachment 47630 [details] Patch Clearing flags on attachment: 47630 Committed r54014: <http://trac.webkit.org/changeset/54014>
WebKit Commit Bot
Comment 4 2010-01-28 13:34:58 PST
All reviewed patches have been landed. Closing bug.
Steve Block
Comment 5 2010-01-29 04:35:43 PST
> How close are we to having Android buildable from svn.webkit.org? That's the > best way to catch future regressions like these. We've so far made good progress with upstreaming the Android changes back to webkit.org. We're going as fast as we can and hope to be done by the end of Spring. Thanks for all your help with reviewing!
Note You need to log in before you can comment on or make changes to this bug.