WebCore/bindings/v8/V8DOMWrapper.h
@@ -92,6 +92,7 @@ namespace WebCore {
     class StyleSheetList;
     class V8EventListener;
     class V8ObjectEventListener;
+    class V8Proxy;
 #if ENABLE(WEB_SOCKETS)
     class WebSocket;
 #endif
